feat: crud for users. Sign Up updated